--- a/Frontend/Web/src/General-Components/Settings/Sidebar/components/FriendRequests/FriendRequests.module.css
+++ b/Frontend/Web/src/General-Components/Settings/Sidebar/components/FriendRequests/FriendRequests.module.css
@@ -152,7 +152,6 @@ h1 {
   justify-content: center;
   /* align-items: center; */
   height: 100vh;
-  /* background: linear-gradient(45deg, rgba(255, 240, 245, 1), rgba(235, 245, 255, 1)); */
   animation: backgroundAnimation 6s infinite ease-in-out;
   padding: 20px;
   /* background-color: red; */
@@ -167,6 +166,9 @@ h1 {
   /* border: 1px solid rgba(255, 255, 255, 0.3); */
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   transform: translateY(10px);
+  background-color: #e2e1e1;
+  height: 320px;
+
 }
 
 
