--- a/Frontend/Web/src/Components/ServiceProvider/providerProfile/providerProfile.module.css
+++ b/Frontend/Web/src/Components/ServiceProvider/providerProfile/providerProfile.module.css
@@ -263,9 +263,11 @@
   }
   
 
-  .isFriends{
+  .isFriends,.cancelSent{
     background-color: #e64202;
     color: white;
     font-weight: 700;
 
   }
+
+ 
