--- a/Frontend/Web/src/General-Components/Settings/Sidebar/Sidebar.module.css
+++ b/Frontend/Web/src/General-Components/Settings/Sidebar/Sidebar.module.css
@@ -28,6 +28,8 @@
   border-radius: 50%;
   border: 2px solid #ecf0f1;
   margin-bottom: 10px;
+  object-fit: cover;
+  cursor: pointer;
 }
 
 .userName {
@@ -104,4 +106,73 @@
   .icon {
     font-size: 1.5rem;
   }
+}
+
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+.modalOverlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+}
+
+.modalContent {
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+  z-index: 1001;
+  text-align: center;
+  width: 600px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+
+}
+
+.editorButtons {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  gap: 100px;
+}
+
+.saveButton {
+  background-color: #4caf50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.cancelButton {
+  background-color: #f44336;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.saveButton:hover,
+.cancelButton:hover {
+  opacity: 0.9;
 }
